# aurora_ws

./: .gitignore
src/aurora_ros-ros2/src/slamware_ros_sdk/launch/: slamware_ros_sdk_server_node.xml
src/aurora_ros-ros2/src/slamware_ros_sdk/rviz/: slamware_ros_sdk_server_node.rviz
src/aurora_ros-ros2/src/slamware_ros_sdk/src/server/: server_params.cpp  server_workers.cpp  server_workers.h
src/pointcloud_to_gridmap/: CMakeLists.txt  package.xml
src/pointcloud_to_gridmap/config/: params.yaml
src/pointcloud_to_gridmap/launch/: convert.launch.py
src/pointcloud_to_gridmap/src/: pointcloud_to_gridmap_node.cpp
src/ranger_ros2/ranger_base/launch/: ranger_mini_v1.launch.xml
src/ranger_ros2/ranger_base/launch/include/: ranger_robot_base.launch.xml
src/ranger_ros2/ranger_base/src/: ranger_messenger.cpp
src/ranger_ros2/ranger_bringup/launch/: ranger.launch.xml  ranger_mini_v2.launch.xml  ranger_mini_v3.launch.xml
src/ros2_lidar_2d_converter/: CMakeLists.txt  package.xml
src/ros2_lidar_2d_converter/include/ros2_lidar_2d_converter/: laserscan_to_pointcloud_node.hpp  pointcloud_to_laserscan_node.hpp  visibility_control.h
src/ros2_lidar_2d_converter/launch/: lidar_converter.launch.py  pointcloud_to_laserscan_launch.py
src/ros2_lidar_2d_converter/src/: laserscan_to_pointcloud_node.cpp  lidar_2d_converter.cpp  pointcloud_to_laserscan_node.cpp
src/ros2_lio_sam/config/: params.yaml  rviz2.rviz
src/ros2_lio_sam/data/: cloudCorner.pcd  cloudGlobal.pcd  cloudSurf.pcd  transformations.pcd
src/ros2_lio_sam/include/lio_sam/: utility.hpp
src/ros2_lio_sam/launch/: run.launch.py
src/ros2_lio_sam/pcd_data/: cloudCorner.pcd  cloudGlobal.pcd  cloudSurf.pcd  trajectory.pcd  transformations.pcd
src/ros2_lio_sam/src/: imuPreintegration.cpp  mapOptmization.cpp
src/rslidar_sdk/config/: config.yaml
src/rslidar_sdk/rviz/: rviz.rviz
src/rslidar_sdk/src/source/: source_pointcloud_ros.hpp
src/slamware_nav2_bridge/: CMakeLists.txt  package.xml
src/slamware_nav2_bridge/config/: bridge_params.yaml
src/slamware_nav2_bridge/launch/: slamware_nav2_bridge.launch.py
src/slamware_nav2_bridge/src/: map_odom_bridge_node.cpp
src/sync_checker/: CMakeLists.txt  package.xml
src/sync_checker/launch/: sync_checker_launch.py
src/sync_checker/src/: sync_checker.cpp
src/wheeltec_robot_nav2/: README.md  package.xml
src/wheeltec_robot_nav2/launch/: bringup_launch.py  mangzou.launch.py  save_map.launch.py  slamware_localization_launch.py  wheeltec_nav2.launch.py
src/wheeltec_robot_nav2/map/: WHEELTEC.yaml  WHEELTEC_shinei.yaml  WHEELTEC_shiwai.yaml  WHEELTEC_tgl.yaml
src/wheeltec_robot_nav2/param/wheeltec_params/: param_top_omni copy.yaml  param_top_omni.yaml
src/wheeltec_robot_nav2/rviz/: wheeltec.rviz
src/wheeltec_robot_slam/: CMakeLists.txt  package.xml
src/wheeltec_robot_slam/config/: mapper_params_online_async.yaml  mapper_params_online_async_corridor.yaml  mapper_params_online_async_text.yaml
src/wheeltec_robot_slam/launch/: online_async_launch.py
src/wheeltec_robot_slam/script/: receiver.py
