<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamware_nav2_bridge</name>
  <version>0.1.0</version>
  <description>Bridge Slamware robot_pose and odom to map-&gt;odom TF for Nav2 (replaces AMCL).</description>
  <maintainer email="cdf_168@163.com">cdf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>slamware_ros_sdk</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
